Chore/lob 1344 remove experimental compiler feature str (#303)
* chore: removed preview feature STR Template

* chore: merged

* chore: spotless